v3.5.0 b631
* rules can now reference multiple drop tables with `use-droptable-id`